--- a/src/app/canvas/canvas.component.scss
+++ b/src/app/canvas/canvas.component.scss
@@ -1,16 +1,7 @@
 .canvas {
   width:900px;
   height:500px;
-  background: gray;
+  background: white;
+  border: 1px solid black;
   position: relative;
-
-  .draggable{
-    width: 100px;
-    height:100px;
-    background: black;
-    position:absolute !important;
-    top:0;
-    left:0;
-    cursor: pointer;
-  }
 }
